# hotturkey

./: .gitignore  ARCHIVE-MANIFEST.md  DESIGN.md  LINUX_COMPATIBILITY.md  MACOS_COMPATIBILITY.md  README.md  TESTING_AUTO_START.md  pyproject.toml  requirements.txt  run.py  tasks.csv  ui-design.md  update_task.ps1
.github/workflows/: ci.yml
hotturkey/: cli.py  config.py  db.py  default_tracked_targets.json  devtools.py  game_catalog.py  logger.py  monitor.py  plots.py  popup.py  runner.py  state.py  tracked_targets.py  tracked_targets.sample.json  tray.py  utils.py  window_enum.py
hotturkey/ascii_art/: bean.txt  bonk.txt  bro.txt  catwithgun.txt  chad.txt  doge.txt  friday.txt  npc.txt  panda.txt  patrick.txt  rickroll.txt  shrek.txt  shrek2.txt  sonic.txt  spongebob.txt  the rock.txt
hotturkey/popup_messages/: popup_messages.txt
tests/: test_budget.py  test_game_catalog.py  test_tracked_targets.py
