[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hotturkey"
version = "0.1.0"
description = "Windows screen-time enforcer for Steam games and browser entertainment sites"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil",
    "pystray",
    "Pillow",
    "pywin32",
]

[project.scripts]
hotturkey = "hotturkey.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hotturkey*"]
